<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.njltech.android.pizzacomposer.crust_size">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:gravity="top|center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <RadioButton
            android:id="@+id/radioNeo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableRight="@drawable/neapolitan"
            android:text="@string/radio_crust_neo"
            android:onClick="onRadioButtonClicked" />

        <RadioButton
            android:id="@+id/radioNY"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableRight="@drawable/nystyle"
            android:text="@string/radio_crust_ny"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/radioPan"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableRight="@drawable/pan"
            android:text="@string/radio_crust_pan"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/radioDeep"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableRight="@drawable/deepdish"
            android:duplicateParentState="false"
            android:scaleX="1"
            android:scaleY="1"
            android:text="@string/radio_crust_deep"
            android:onClick="onRadioButtonClicked"/>


    </RadioGroup>

    <Spinner
        android:id="@+id/spinner_size"
        style="@android:style/Widget.Holo.Light.Spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:entries="@array/sizes"
        android:prompt="@string/spn_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSize" />

    <TextView
        android:id="@+id/txtSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:text="@string/spn_size"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <Button
        android:id="@+id/btnToppings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/btnToppings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_size" />
</android.support.constraint.ConstraintLayout>
